spacing, fix link

--- a/src/main/components/Body/components/Work/styles.module.css
+++ b/src/main/components/Body/components/Work/styles.module.css
@@ -25,6 +25,10 @@
     font-size: 36px !important;
 }
 
+.padBelow {
+    margin-bottom: 60px;
+}
+
 @media (min-width: 980px) {
     .grid, .gridFeatured {
         display: flex;
